alterando o css do footer e da navbar

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,7 +5,7 @@
 .footer {
     height: 125px;
     width: 100%;
-    background: linear-gradient(180deg, #B009DE, #780099);
+    background: linear-gradient(360deg, #400052, #780099);
 }
 
 .container{
