--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ main{
 .div-main{
     background-color: white;
     padding: 50px;
+    border-radius: 20px;
 }
 
 .slogan-viva-bem{
@@ -31,9 +32,9 @@ main{
     display: flex;
     margin: 0 auto;
     width: 700px;
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 0px 40px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    padding: 10px 40px;
 }
 
 .div-description-viva-bem{
