--- a/styles/imc.css
+++ b/styles/imc.css
@@ -27,6 +27,18 @@ form{
     font-size: 17px;
 }
 
+.input-altura-peso{
+    width: 150px;
+}
+
+.distancia{
+    padding: 50px;
+}
+
+.info-complementar{
+    text-align: center;
+}
+
 button{
     width: 100px;
     font-size: 17px;
