--- a/styles/imc.css
+++ b/styles/imc.css
@@ -29,6 +29,13 @@ form{
 
 .input-altura-peso{
     width: 150px;
+    margin-bottom: 20px;
+    margin: 15px 0px 25px;
+    padding: 5px 0px;
+    border-radius: 10px;
+    border: 2px solid;
+    border-color: #b6b4b4;
+    font-size: 17px;
 }
 
 .distancia{
@@ -51,4 +58,11 @@ button{
     border: 2px solid #898989;
     border-radius: 5px;
     transition: 0.3s;
+}
+
+button:hover{
+    background-color: blueviolet;
+    color: white;
+    width: 125px;
+    border: 2px solid black;
 }
