--- a/styles/imc.css
+++ b/styles/imc.css
@@ -1,3 +1,8 @@
+main {
+    background-color: #ededed;
+    padding: 80px 0px;
+}
+
 input, label{
     color: black;
     text-align: center;
@@ -7,7 +12,7 @@ input, label{
 
 form{
     display: grid;
-    margin: 80px 250px;
+    margin: 0px 250px;
     border-radius: 10px;
     padding: 80px 0px 80px 0px;
     background-color: white;
