--- a/styles/style.css
+++ b/styles/style.css
@@ -3,119 +3,178 @@ html {
 }
 
 main {
-    background-color: rgb(245, 245, 245);;
-    font-family: 'Inter', sans-serif;
+    background-color: #edededed;
 }
 
-.div-main {
-    background-color: white;
-    border-radius: 20px;
-}
-
-.div-main:nth-child(1) {
-    margin: 55px 0;
+.img-main-inicio {
+    width: 100%;
 }
 
 .slogan-viva-bem {
-    color: black;
+    color: #541E63;
     font-family: 'Roboto', sans-serif;
-    display: grid;
-    justify-content: center;
-    font-size: 25px;
-    padding: 0px 0px 50px;
-}
-
-.titulo-viva-bem {
-    color: black;
-    justify-content: center;
-    display: grid;
-    font-size: 20px;
-    margin-bottom: 65px;
-}
-
-.titulo-viva-bem:nth-child(1) {
-    margin-bottom: 30px;
-}
-
-.div-description-img-vivaBem {
-    display: flex;
-    margin: 0 auto;
-    width: 700px;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    padding: 10px 40px;
-}
-
-.div-description-viva-bem {
+    font-size: 55px;
+    position: absolute;
+    top: 150px;
+    left: 30px;
     width: 600px;
 }
 
-.description-viva-bem {
-    color: black;
-    padding: 30px;
-    line-height: 20px;
+.titulo-viva-bem {
+    color: white;
+    font-size: 25px;
+    position: absolute;
+    top: 450px;
+    left: 30px;
+    width: 630px;
+    background-color: purple;
+    border-radius: 10px;
+    padding: 12px 10px;
+    font-family:sans-serif;
 }
 
-.description-viva-bem:nth-child(3) {
+.description-viva-bem {
+    display: flex;
+    justify-content: center;
+    margin: 50px 0px;
+}
+
+.div-first-description{
+    background-color: white;
+    width: 40%;
+    margin: 30px 0px 30px 30px;
+    padding: 80px 40px;
     text-align: center;
 }
 
-.img-meditacao {
-    width: 300px;
-    height: 215px;
-    padding: 20px 0px 20px;
-    border-right: 2px dashed black;
-    margin-left: -40px;
+.p-first-description{
+    color: black;
+    font-family: 'Gabarito', cursive;
+    font-size: 30px;
+}
+
+.div-second-description{
+    background-color: #333;
+    width: 40%;
+    margin: 30px 30px 30px 0px;
+    padding: 80px 40px;
+    text-align: center;
+}
+
+.p-second-description{
+    color: white;
+    font-family: 'Gabarito', cursive;
+    font-size: 30px;
+}
+
+.div-produtos {
+    background-color: #400052   ;
+}
+
+.img-mulher-produtos{
+    width: 40%;
+    padding: 30px;
+}
+
+.section-produtos {
+    position: absolute;
+    right: 60px;
+    bottom: -920px;
+}
+
+.h2-produtos{
+    font-family: 'Gabarito', cursive;
+    font-size: 40px;
+    padding: 20px 0px;
+}
+
+.p-produtos{
+    font-family: 'Gabarito', cursive;
+    font-size: 20px;
+    padding: 0px 0px 20px;
 }
 
 .btn-veja-mais {
     color: black;
     background: white;
     border: 1px solid #8080807d;
-    width: 12%;
     padding: 15px 150px;
     font-size: 17px;
-    margin: 0px auto 10px;
     border-radius: 30px;
-    justify-content: center;
-    display: grid;
     cursor: pointer;
+    font-family: 'Gabarito', cursive;
 }
 
 .anchor-arrow {
     color: black;
-    text-align: center;
-    justify-content: center;
+    width: 80px;
     display: grid;
+    text-align: center;
 }
 
 .input-min {
     scale: 0.01;
     background: none;
     border: none;
+    position: absolute;
 }
 
-.div-btn-produtos {
+.div-produtos-description{
+    width: 50%;
+    margin: 30px;
+}
+
+.h2-produtos-description{
+    color: black;
+    font-family: 'Gabarito', cursive;
+    font-size: 40px;
+    margin: 10px;
+}
+
+.p-produtos-description {
+    color: black;
+    font-family: 'Gabarito', cursive;
+    font-size: 20px;
+    margin: 30px 0px;
+}
+
+.section-produtos-btn{
     display: flex;
-    margin: 5px;
+    padding: 30px 0px;
 }
 
 .btn-description-produtos {
-    color: black;
-    width: 70%;
-    padding: 10px;
-    background-color: white;
+    background-color: purple;
     border: 1px solid #808080d6;
+    border-bottom: 0px;
+    width: 100%;
+    padding: 20px 50px 20px 50px;
+    margin: 10px auto;
+    font-size: 17px;
     cursor: pointer;
-    margin: 0 auto;
-    font-size: 15px;
+    display: flex;
     text-align: inherit;
     transition: 0.2s;
 }
 
 .btn-description-produtos:focus {
-    box-shadow: 0px 0px 1px 1px purple;
-    background-color: #ffa2ff;
+    box-shadow: 4px -4px 1px 1px #360140;
+    background-color: rgb(95, 1, 95);
+}
+
+.btn-description-produtos:nth-child(1){
+    margin-top: 50px;
+}
+
+.name-produtos {
+    color: white;
+    width: 100%;
+    font-family: 'Gabarito', cursive;
+}
+
+.plus{
+    color: white;
+    margin-left: 150px;
 }
 
 .material-symbols-outlined{
@@ -142,4 +201,13 @@ main {
 
 .notShowing {
     display: none;
+}
+
+.section-produtos-buy{
+    background-color: purple;
+    font-family: 'Gabarito', cursive;
+    color: white;
+    padding: 15px;
+    margin: -10px 0px 20px;
+    max-width: 485px;
 }
