--- a/styles/imc.css
+++ b/styles/imc.css
@@ -14,7 +14,7 @@ form{
     display: grid;
     margin: 0px 250px;
     border-radius: 10px;
-    padding: 80px 0px 80px 0px;
+    padding: 80px 0px 30px 0px;
     background-color: white;
 }
 
@@ -70,4 +70,14 @@ button:hover{
     color: white;
     width: 125px;
     border: 2px solid black;
+}
+
+.div-resultado {
+    color: black;
+    font-family: 'Gabarito', cursive;
+    margin: 40px 100px;
+    padding: 20px 0px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 10px;
 }
