--- a/styles/imc.css
+++ b/styles/imc.css
@@ -78,6 +78,7 @@ button:hover{
     margin: 40px 100px;
     padding: 20px 0px;
     text-align: center;
-    border: 1px solid black;
+    font-size: 20px;
+    border: 2px solid black;
     border-radius: 10px;
 }
